[package]
name = "bagpipe"
version = "0.1.0"
authors = ["Eli Rosenthal <ezrosenthal@gmail.com>"]

[features]
# TODO: Rename these features to use dashes instead of underscores
default = ["check_empty_yq"]
check_empty_yq = []
prime_schedules = []
staggered_indexes = []
huge_segments = []

[dependencies]
crossbeam = "0.2"
num_cpus = "1.5"
