# Copyright 2017-2018 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE-APACHE file) or
# the MIT license (the LICENSE-MIT file) at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "bagpipe"
version = "0.1.0"
authors = ["Eli Rosenthal <ezrosenthal@gmail.com>"]
license = "Apache-2.0/MIT"
description = "A concurrent bag datastructure."

keywords = ["bagpipe", "bag", "concurrent", "queue", "set"]
categories = ["algorithms", "concurrency", "data-structures"]

readme = "README.md"
documentation = "https://docs.rs/bagpipe"
repository = "https://github.com/ezrosent/allocators-rs/tree/master/bagpipe"

exclude = ["appveyor.sh", "travis.sh"]

[features]
# TODO: Rename these features to use dashes instead of underscores
default = ["check_empty_yq"]
check_empty_yq = []
prime_schedules = []
staggered_indexes = []
huge_segments = []

[dependencies]
crossbeam = "0.2"
crossbeam-epoch = "0.4.0"
num_cpus = "1.5"
