# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE file). This file
# may not be copied, modified, or distributed except according to those terms.

[package]
name = "bsalloc"
version = "0.1.0"
authors = ["Eli Rosenthal <ezrosenthal@gmail.com>"]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
lazy_static = { version = "0.2", features = ["spin_no_std"] }
mmap-alloc = { path = "../mmap-alloc" }
