# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE-APACHE file) or
# the MIT license (the LICENSE-MIT file) at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "bsalloc"
version = "0.1.0"
authors = ["Eli Rosenthal <ezrosenthal@gmail.com>"]
license = "Apache-2.0"
description = "A simple general-purpose allocator used to bootstrap other allocators."

keywords = ["bootstrap", "allocator"]
categories = ["concurrency", "memory-management", "no-std"]

readme = "README.md"
documentation = "https://docs.rs/bsalloc"
repository = "https://github.com/ezrosent/allocators-rs/tree/master/bsalloc"

exclude = ["appveyor.sh", "travis.sh"]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
lazy_static = { version = "0.2.9", features = ["spin_no_std"] }
mmap-alloc = { path = "../mmap-alloc" }
