[package]
name = "elfc"
version = "0.1.0"
authors = ["Eli Rosenthal <ezrosenthal@gmail.com>"]

[lib]
name = "elfc"
crate-type = ["cdylib"]

[features]
nightly = ["elfmalloc/nightly"]
local_cache = ["elfmalloc/local_cache"]

[dependencies]
elfmalloc = { path = "../elfmalloc" }
errno = "0.2"
libc = "0.2"
sysconf = { path = "../sysconf" }
