# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE file). This file
# may not be copied, modified, or distributed except according to those terms.

[package]
name = "elfc"
version = "0.1.0"
authors = ["Eli Rosenthal <ezrosenthal@gmail.com>"]
license = "Apache-2.0"

publish = false
exclude = ["travis.sh"]

[lib]
name = "elfc"
crate-type = ["cdylib"]

[features]
nightly = ["elfmalloc/nightly"]
local_cache = ["elfmalloc/local_cache"]
logging = ["elfmalloc/print_stats"]

[dependencies]
elfmalloc = { path = "../elfmalloc" }
errno = "0.2"
libc = "0.2"
sysconf = "0.3.1"
env_logger = "0.4.3"
