# Copyright 2017-2018 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE-APACHE file) or
# the MIT license (the LICENSE-MIT file) at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "elfc"
version = "0.1.0"
authors = ["Eli Rosenthal <ezrosenthal@gmail.com>"]
license = "Apache-2.0/MIT"

publish = false
exclude = ["appveyor.sh", "travis.sh"]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[lib]
name = "elfc"
crate-type = ["cdylib"]

[features]
local_cache = ["elfmalloc/local_cache"]
magazine_layer = ["elfmalloc/magazine_layer"]
logging = ["elfmalloc/print_stats"]

[dependencies]
alloc-tls = { path = "../alloc-tls", features = ["dylib"] }
bsalloc = { path = "../bsalloc" }
elfmalloc = { path = "../elfmalloc", features = ["c-api"] }
malloc-bind = { path = "../malloc-bind" }
env_logger = "0.4.3"
