# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE file). This file
# may not be copied, modified, or distributed except according to those terms.

[package]
name = "elfmalloc"
version = "0.1.0"
authors = ["Eli Rosenthal <ezrosenthal@gmail.com>", "Joshua Liebow-Feeser <hello@joshlf.com>"]

[features]
# TODO: Rename these features to use dashes instead of underscores
prime_schedules = ["bagpipe/prime_schedules"]
huge_segments = ["bagpipe/huge_segments"]
no_lazy_region = []
nightly = []
local_cache = []
use_default_allocator = []
print_stats = ["nightly"]

[dependencies]
bagpipe = { path = "../bagpipe" }
bsalloc = { path = "../bsalloc" }
lazy_static = "0.2"
mmap-alloc = { path = "../mmap-alloc" }
num_cpus = "1.5"
log = "0.3.8"

[dev-dependencies]
env_logger = "0.4.3"
