[package]
name = "mmap-alloc"
version = "0.1.0"
authors = ["Joshua Liebow-Feeser <hello@joshlf.com>"]

[features]
# By default, test builds are not no_std. This feature makes test builds no_std.
test-no-std = []

[dependencies]
errno = "0.2"
kernel32-sys = "0.2"
# use no_std libc
libc = { version = "0.2", default-features = false }
object-alloc = { path = "../object-alloc" }
sysconf = { path = "../sysconf" }
winapi = "0.2"
