# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE file). This file
# may not be copied, modified, or distributed except according to those terms.

[package]
name = "mmap-alloc"
version = "0.1.0"
authors = ["Joshua Liebow-Feeser <hello@joshlf.com>"]

[features]
# By default, test builds are not no_std. This feature makes test builds no_std.
test-no-std = []

[dependencies]
errno = "0.2"
kernel32-sys = "0.2"
# use no_std libc
libc = { version = "0.2", default-features = false }
object-alloc = { path = "../object-alloc" }
sysconf = "0.3.0"
winapi = "0.2"
