[package]
name = "mmap_alloc"
version = "0.1.0"
authors = ["Joshua Liebow-Feeser <hello@joshlf.com>"]

[features]
# By default, test builds are not no_std. This feature makes test builds no_std.
test_no_std = []

[dependencies]
# use no_std libc
libc = { version = "0.2", default-features = false }
errno = "0.2.3"
kernel32-sys = "0.2.2"
winapi = "0.2.8"

[dependencies.sysconf]
path = "../sysconf"
