# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE file). This file
# may not be copied, modified, or distributed except according to those terms.

[package]
name = "object-alloc-test"
version = "0.1.0"
authors = ["Joshua Liebow-Feeser <hello@joshlf.com>"]

[dependencies]
interpolate_idents = "0.1"
lazy_static = "0.2"
libc = "0.2"
object-alloc = { path = "../object-alloc" }
quickcheck = "0.4"
rand = "0.3"
twox-hash = "1.1"
winapi = "0.2"
