# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE-APACHE file) or
# the MIT license (the LICENSE-MIT file) at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "object-alloc-test"
version = "0.1.0"
authors = ["Joshua Liebow-Feeser <hello@joshlf.com>"]
license = "Apache-2.0/MIT"
description = "A suite of tests for object allocators."

keywords = ["allocator", "object", "test", "memory", "corruption"]
categories = ["caching", "memory-management"]

readme = "README.md"
documentation = "https://docs.rs/object-alloc-test"
repository = "https://github.com/ezrosent/allocators-rs/tree/master/object-alloc-test"

exclude = ["appveyor.sh", "travis.sh"]

[dependencies]
interpolate_idents = "0.1.8"
lazy_static = "0.2.9"
libc = "0.2"
object-alloc = "0.1.0"
quickcheck = "0.4"
rand = "0.3"
twox-hash = "1.1"
winapi = "0.2"
