# Copyright 2017-2018 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE-APACHE file) or
# the MIT license (the LICENSE-MIT file) at your option. This file may not be
# copied, modified, or distributed except according to those terms.

[package]
name = "object-alloc-test"
version = "0.1.0"
authors = ["Joshua Liebow-Feeser <hello@joshlf.com>"]
license = "Apache-2.0/MIT"
description = "A suite of tests for object allocators."

keywords = ["allocator", "object", "test", "memory", "corruption"]
categories = ["caching", "memory-management"]

readme = "README.md"
documentation = "https://docs.rs/object-alloc-test"
repository = "https://github.com/ezrosent/allocators-rs/tree/master/object-alloc-test"

exclude = ["appveyor.sh", "travis.sh"]

[dependencies]
kernel32-sys = "0.2"
lazy_static = "1.0.0"
libc = "0.2"
object-alloc = { path = "../object-alloc" }
paste = "0.1"
quickcheck = "0.4"
rand = "0.3"
twox-hash = "1.1"

[dependencies.winapi]
version = "0.3"
features = ["basetsd", "psapi"]
