# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE file). This file
# may not be copied, modified, or distributed except according to those terms.

[package]
name = "object-alloc"
version = "0.1.0"
authors = ["Joshua Liebow-Feeser <hello@joshlf.com>"]
license = "Apache-2.0"
description = "An object allocator trait for Rust."

keywords = ["allocator", "object", "caching"]
categories = ["algorithms", "caching", "memory-management"]

readme = "README.md"
documentation = "https://docs.rs/object-alloc"
repository = "https://github.com/ezrosent/allocators-rs/tree/master/object-alloc"

exclude = ["travis.sh"]
