# Copyright 2017 the authors. See the 'Copyright and license' section of the
# README.md file at the top-level directory of this repository.
#
# Licensed under the Apache License, Version 2.0 (the LICENSE file). This file
# may not be copied, modified, or distributed except according to those terms.

[package]
name = "slab-alloc"
version = "0.1.0"
authors = ["Joshua Liebow-Feeser <hello@joshlf.com>", "Eli Rosenthal <ezrosenthal@gmail.com>"]
keywords = ["allocator", "cache", "object", "slab", "magazine"]
categories = ["algorithm", "caching", "no-std", "memory-management"]

[profile.test]
opt-level = 3

[features]
# NOTE: no-std and no-os are not currently supported; see
# https://github.com/ezrosent/allocators-rs/issues/2 for
# progress towards no-std and no-os.
default = ["std", "os"]
std = ["os"]
os = []

build-ignored-tests = []
use-stdlib-hashmap = []
no-coloring = []
hashmap-no-resize = []
hashmap-no-coalesce = []

[dependencies]
interpolate_idents = "0.1"
lazy_static = { version = "0.2", features = ["spin_no_std"] }
mmap-alloc = { path = "../mmap-alloc" }
object-alloc = { path = "../object-alloc" }
object-alloc-test = { path = "../object-alloc-test" }
rand = "0.3"
sysconf = "0.3.0"
